tests/ui/delegation/generics/unresolved-segment-ice-153389.stderr
error[E0425]: cannot find function `missing` in this scope
  --> $DIR/unresolved-segment-ice-153389.rs:9:11
   |
LL |     reuse missing::<> as bar;
   |           ^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
