tests/ui/delegation/generics/unresolved-segment-ice-153389.rs
#![feature(fn_delegation)]
#![allow(incomplete_features)]

trait Trait{
    fn bar();
}

impl Trait for () {
    reuse missing::<> as bar;
    //~^ ERROR: cannot find function `missing` in this scope
}

fn main() {}
